[tool.poetry]
name = "brightwheel-photos"
version = "0.4.0"
description = "CLI tool for downloading a student's photos from Brightwheel."
authors = ["Johnathan Gilday <me@johnathangilday.com>"]
readme = "README.md"
packages = [{include = "brightwheel_photos"}]


[tool.poetry.dependencies]
python = "^3.8"
certifi = "2024.7.4"
chardet = "4.0.0"
idna = "2.10"
piexif = "1.1.3"
Pillow = "^10.1.0"
plum-py = "0.3.1"
requests = "^2.31.0"
urllib3 = "1.26.19"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
taskipy = "^1.12.2"
pylint = "^3.0.3"
pytest = "^7.4.3"


[tool.poetry.scripts]
brightwheel-photos = "brightwheel_photos.cli:main"


[tool.taskipy.tasks]
format = "black ."
lint = "pylint --errors-only brightwheel_photos"
test = "pytest"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
