[project]
name = "brightwheel-photos"
version = "0.4.0"
description = "CLI tool for downloading a student's photos from Brightwheel."
authors = [{name = "Johnathan Gilday", email = "me@johnathangilday.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "certifi==2023.7.22",
    "chardet==4.0.0",
    "idna==2.10",
    "piexif==1.1.3",
    "Pillow>=10.1.0",
    "plum-py==0.3.1",
    "requests>=2.31.0",
    "urllib3==1.26.19",
    "python-dotenv>=1.0.0",
]

[project.scripts]
brightwheel-photos = "brightwheel_photos.cli:main"

[tool.uv]
dev-dependencies = [
    "black>=23.11.0",
    "pylint>=3.0.3",
    "pytest>=7.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
